Fixing dropdown height issue on mobile

--- a/styles/header.css
+++ b/styles/header.css
@@ -1039,7 +1039,7 @@ form[id="search-top-box-form"] {
 		-moz-column-count: 3;
 		column-count: 3;
 		width: 85vw !important;
-		max-height: calc(100vh - 12rem);
+		max-height: calc(100vh - 8rem);
 	}
 
 	#top-bar div.mobile-top-bar > ul > li:hover > ul, 
@@ -1053,8 +1053,8 @@ form[id="search-top-box-form"] {
 	}
 
 	#top-bar div.mobile-top-bar > ul > li > ul > li {
-		max-height: -webkit-calc((100vh - 12rem) / 15);
-		max-height: calc((100vh - 12rem) / 15);
+		max-height: -webkit-calc((100vh - 15rem) / 15);
+		max-height: calc((100vh - 15rem) / 15);
 		max-width: -webkit-calc(80vw + 0.0625rem);
 		max-width: calc(80vw + 0.0625rem);
 		width: -webkit-calc(80vw + 0.0625rem);
